# FerrisPizza

./: Cargo.toml  README.md
.github/workflows/: ci.yml
ferrispizza_cli/: Cargo.toml
ferrispizza_cli/src/: app.rs  cli.rs  commands.rs  input.rs  main.rs  printer.rs
ferrispizza_cli/src/commands/: history.rs  menu.rs  order.rs  pay.rs
ferrispizza_lib/: Cargo.toml
ferrispizza_lib/src/: billing.rs  concurrency.rs  errors.rs  lib.rs  order.rs  patterns.rs  pizza.rs  utils.rs
ferrispizza_lib/src/billing/: calculator.rs
ferrispizza_lib/src/concurrency/: order_channel.rs  shared_state.rs
ferrispizza_lib/src/errors/: billing_error.rs  order_error.rs
ferrispizza_lib/src/order/: Order.rs
ferrispizza_lib/src/patterns/: adapter.rs  decorator.rs
ferrispizza_lib/src/pizza/: base.rs  crust.rs  toppings.rs
ferrispizza_lib/src/utils/: file_logger.rs  id_generator.rs
ferrispizza_lib/test/: integration_concurrency.rs  integration_menu.rs  integration_payments.rs
